--- a/app/src/main/res/layout-xlarge/content_main.xml
+++ b/app/src/main/res/layout-xlarge/content_main.xml
@@ -6,8 +6,17 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.patryk.astrocalculator.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:orientation="vertical"
+    android:weightSum="1">
 
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="80sp" />
 
     <view
         android:id="@+id/viewPager"
@@ -15,5 +24,6 @@
         id="@+id/view"
         layout_weight="1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
+
 </LinearLayout>
