--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.patryk.astrocalculator.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/Settings"
+        android:title="@string/action_settings" />
+    <item
+        android:id="@+id/About"
+        android:title="@string/action_about" />
+    <item
+        android:id="@+id/Exit"
+        android:title="@string/action_exit" />
 </menu>
