--- a/app/src/main/res/layout/fragment_sun.xml
+++ b/app/src/main/res/layout/fragment_sun.xml
@@ -4,9 +4,14 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/SUN"
+        android:id="@+id/latitudeTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="sun " />
+        android:gravity="center" />
+
+    <TextView
+        android:id="@+id/longitudeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center" />
 </LinearLayout>
