--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -29,7 +29,7 @@
                 android:layout_marginBottom="5dp"
                 android:gravity="center"
                 android:text="@string/coordinateSettings"
-                android:textSize="18sp"
+                android:textSize="@dimen/h1"
                 android:textStyle="bold" />
         </TableRow>
 
@@ -51,7 +51,7 @@
                 android:gravity="center"
                 android:paddingRight="10dp"
                 android:text="@string/latitude"
-                android:textSize="16sp" />
+                android:textSize="@dimen/p" />
 
             <EditText
                 android:id="@+id/latitude"
@@ -81,7 +81,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/longitude"
-                android:textSize="16sp" />
+                android:textSize="@dimen/p" />
 
             <EditText
                 android:id="@+id/longtitude"
@@ -109,7 +109,7 @@
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="@string/frequencySettings"
-                android:textSize="18sp"
+                android:textSize="@dimen/h1"
                 android:textStyle="bold" />
 
         </TableRow>
@@ -132,7 +132,7 @@
                 android:gravity="center"
                 android:paddingRight="10dp"
                 android:text="@string/time"
-                android:textSize="16sp" />
+                android:textSize="@dimen/p" />
 
             <EditText
                 android:id="@+id/frequency"
@@ -163,7 +163,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:elevation="1dp"
-                android:text="@string/apply" />
+                android:text="@string/apply"
+                android:textSize="@dimen/p" />
 
         </TableRow>
     </TableLayout>
