--- a/app/src/main/res/layout/fragment_moon.xml
+++ b/app/src/main/res/layout/fragment_moon.xml
@@ -11,20 +11,22 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/moon"
-        android:textSize="40sp"
+        android:textSize="@dimen/title"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/latitudeTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textSize="@dimen/p" />
 
     <TextView
         android:id="@+id/longitudeTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textSize="@dimen/p" />
 
     <TextView
         android:id="@+id/textView"
@@ -34,7 +36,7 @@
         android:paddingRight="20dp"
         android:paddingTop="5dp"
         android:text="@string/moonrise"
-        android:textSize="24sp"
+        android:textSize="@dimen/h1"
         android:textStyle="bold" />
 
     <TextView
@@ -43,7 +45,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="30dp"
         android:paddingRight="20dp"
-        android:text="Time: " />
+        android:text="Time: "
+        android:textSize="@dimen/p" />
 
     <TextView
         android:id="@+id/textView13"
@@ -53,7 +56,7 @@
         android:paddingRight="20dp"
         android:paddingTop="5dp"
         android:text="@string/moonset"
-        android:textSize="24sp"
+        android:textSize="@dimen/h1"
         android:textStyle="bold" />
 
     <TextView
@@ -62,7 +65,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="30dp"
         android:paddingRight="20dp"
-        android:text="Time: " />
+        android:text="Time: "
+        android:textSize="@dimen/p" />
 
     <TextView
         android:id="@+id/textView15"
@@ -72,7 +76,7 @@
         android:paddingRight="20dp"
         android:paddingTop="5dp"
         android:text="@string/newMoon"
-        android:textSize="24sp"
+        android:textSize="@dimen/h1"
         android:textStyle="bold" />
 
     <TextView
@@ -81,7 +85,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="30dp"
         android:paddingRight="20dp"
-        android:text="Time: " />
+        android:text="Time: "
+        android:textSize="@dimen/p" />
 
     <TextView
         android:id="@+id/textView25"
@@ -91,7 +96,7 @@
         android:paddingRight="20dp"
         android:paddingTop="5dp"
         android:text="@string/fullMoon"
-        android:textSize="24sp"
+        android:textSize="@dimen/h1"
         android:textStyle="bold" />
 
     <TextView
@@ -100,7 +105,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="30dp"
         android:paddingRight="20dp"
-        android:text="Time: " />
+        android:text="Time: "
+        android:textSize="@dimen/p" />
 
     <TextView
         android:id="@+id/textView17"
@@ -110,7 +116,7 @@
         android:paddingRight="20dp"
         android:paddingTop="5dp"
         android:text="@string/moonPhase"
-        android:textSize="24sp"
+        android:textSize="@dimen/h1"
         android:textStyle="bold" />
 
     <TextView
@@ -119,7 +125,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="30dp"
         android:paddingRight="20dp"
-        android:text="Time: " />
+        android:text="Time: "
+        android:textSize="@dimen/p" />
 
     <TextView
         android:id="@+id/textView19"
@@ -129,7 +136,7 @@
         android:paddingRight="20dp"
         android:paddingTop="5dp"
         android:text="@string/synodicDay"
-        android:textSize="24sp"
+        android:textSize="@dimen/h1"
         android:textStyle="bold" />
 
     <TextView
@@ -138,5 +145,6 @@
         android:layout_height="wrap_content"
         android:paddingLeft="30dp"
         android:paddingRight="20dp"
-        android:text="Time: " />
+        android:text="Time: "
+        android:textSize="@dimen/p" />
 </LinearLayout>
