--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,7 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_margin">16sp</dimen>
+    <dimen name="title">40sp</dimen>
+    <dimen name="h1">24sp</dimen>
+    <dimen name="p">14sp</dimen>
+    <bool name="isTablet">false</bool>
 </resources>
