--- a/app/src/main/res/layout/fragment_moon.xml
+++ b/app/src/main/res/layout/fragment_moon.xml
@@ -19,9 +19,11 @@
             android:textStyle="bold" />
 
         <TextClock
-            android:id="@+id/textClock2"
+            android:id="@+id/textClock"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:format12Hour="hh:mm:ss "
+            android:format24Hour="hh:mm:ss"
             android:gravity="center"
             android:textAppearance="@android:style/TextAppearance.Material.Small" />
 
