--- a/app/src/main/res/layout/fragment_sun.xml
+++ b/app/src/main/res/layout/fragment_sun.xml
@@ -24,6 +24,8 @@
             android:id="@+id/textClock"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:format12Hour="hh:mm:ss"
+            android:format24Hour="hh:mm:ss"
             android:gravity="center"
             android:textAppearance="@android:style/TextAppearance.Material.Small" />
 
