--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -39,6 +39,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginRight="5dp"
             android:layout_weight="2"
             android:gravity="center"
             android:paddingRight="10dp">
@@ -67,6 +68,7 @@
         <TableRow
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
             android:gravity="center"
             android:paddingRight="10dp"
             android:weightSum="2">
@@ -120,6 +122,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginRight="5dp"
             android:layout_weight="2"
             android:gravity="center"
             android:paddingRight="10dp">
