checking correct values in settings, change method name updateInfo

--- a/app/src/main/res/layout/fragment_sun.xml
+++ b/app/src/main/res/layout/fragment_sun.xml
@@ -98,7 +98,8 @@
             android:gravity="center"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="Azimuth" />
+            android:text="Azimuth"
+            android:textSize="@dimen/p" />
 
         <TextView
             android:id="@+id/textView5"
