--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,11 @@
         android:id="@+id/Settings"
         android:title="@string/action_settings" />
     <item
+        android:id="@+id/change_city"
+        android:orderInCategory="1"
+        android:title="@string/change_city"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/About"
         android:title="@string/action_about" />
     <item
