refactoring - created package for activities and fragments, added parameter for getting jsonObject

--- a/app/src/main/res/layout-xlarge/content_main.xml
+++ b/app/src/main/res/layout-xlarge/content_main.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical"
     android:weightSum="100"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.patryk.astrocalculator.MainActivity"
+    tools:context="com.patryk.astrocalculator.activity.MainActivity"
     tools:showIn="@layout/activity_main">
 
 
     <fragment
         android:id="@+id/fragment"
-        android:name="com.patryk.astrocalculator.FragmentSun"
+        android:name="com.patryk.astrocalculator.fragment.FragmentSun"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="45"
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/fragment2"
-        android:name="com.patryk.astrocalculator.FragmentMoon"
+        android:name="com.patryk.astrocalculator.fragment.FragmentMoon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="65"
